Private_location/Istio/deploy_opl-istio.yaml
# This is the main deployment manifest for crane deployment (Make changes to the HarbourId, ShipId & Auth-token)
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: role-crane1
  name: crane-istio
  namespace: bm1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: role-crane1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: role-crane1
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
      - env:
        - name: AUTH_TOKEN
          value: b4dc0fbd6e470ff8b27efa755c112feae77d5f46a30bc56e784d55ce995f9c9a # Update auth token
        - name: HARBOR_ID
          value: 650e7217a737f4164d0e20a6 # Update Harbour ID
        - name: SHIP_ID
          value: 651166b6e14bba8e570da596 # Update ship ID
        - name: CONTAINER_MANAGER_TYPE
          value: KUBERNETES
        - name: IMAGE_OVERRIDES
          value: '{}'
        - name: DOCKER_REGISTRY
          value: gcr.io/verdant-bulwark-278
        - name: AUTO_KUBERNETES_UPDATE
          value: 'true'
        - name: KUBERNETES_WEB_EXPOSE_TYPE
          value: ISTIO
        - name: KUBERNETES_WEB_EXPOSE_SUB_DOMAIN
          value: bmgo.local
        - name: KUBERNETES_WEB_EXPOSE_TLS_SECRET_NAME
          value: wildcard-credential
        - name: KUBERNETES_SERVICE_USE_TYPE
          value: CLUSTERIP
        - name: KUBERNETES_USE_PRE_PULLING
          value: "true"
        - name: KUBERNETES_SERVICES_BLOCKING_GET
          value: "true"
        - name: KUBERNETES_ISTIO_GATEWAY_NAME
          value: bzm-gateway
       ## Note: The environment variable KUBERNETES_ISTIO_GATEWAY_NAME is optional. If it is not set, the crane agent creates a gateway resource for every mock deployment.

        image: gcr.io/verdant-bulwark-278/blazemeter/crane:latest-master
        imagePullPolicy: Always
        
        name: crane-container
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
