Private_location/Istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bzm-gateway
  namespace : bm1
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-80
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
  - port:
      number: 15443
      name: https-15443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wildcard-credential
    hosts:
    - "*"
